Right-aligned sidebar must be position:absolute, not position:fixed.
position:fixed causes sidebar height to be calculated relative to the whole browser window rather than the space allocated to the sidebar.

--- a/firefox/sideberyModsOnRight.css
+++ b/firefox/sideberyModsOnRight.css
@@ -4,7 +4,7 @@
 }
 
 #main-window:not([extradragspace="true"]) #sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"]:not([hidden]) {
-  position: fixed;
+  position: absolute;
   right: 0;
 }
 
